--- a/app/assets/index.jade
+++ b/app/assets/index.jade
@@ -3,6 +3,9 @@ doctype html
 html
   head
     meta(http-equiv="Content-type", content="text/html; charset=utf-8")/
+    - var csp = htmlWebpackPlugin.options.csp
+    if csp
+      meta(http-equiv="Content-Security-Policy", content=csp)
     meta(name="viewport", content="width=device-width,initial-scale=1")/
     title= htmlWebpackPlugin.options.title
     script(src="cordova.js")
